Add instance disk usage to the Control Panel Dashboard. Split the dashboard grid into two. Add more analytics tables to the debug page. Add flushes to the Control Panel Dashboard. Fix some templates not transpiling properly. Reduce duplication in the debug route. Fix the link styling in the Control Panel Dashboard for Tempra Simple.
Transpile the Control Panel Dashboard.

Added the panel_dashboard_disk phrase.
Added the panel_dashboard_disk_desc phrase.

--- a/templates/panel_dashboard.html
+++ b/templates/panel_dashboard.html
@@ -1,8 +1,15 @@
 <div class="colstack_item colstack_head">
 	<div class="rowitem"><h1>{{lang "panel_dashboard_head"}}</h1></div>
-</div>
-<div id="panel_dashboard" class="colstack_grid">
-{{range .}}
+</div>{{flush}}
+<div class="colstack_grid panel_dashboard grid1">
+{{range .Grid1}}
+	<div id="{{.ID}}" class="grid_item {{.Class}}" title="{{.Note}}" style="{{if .TextColour}}color:{{.TextColour}};{{end}}{{if .Background}}background-color:{{.Background}};{{end}}">
+		{{if .Href}}<a href="{{.Href}}">{{.Body}}</a>{{else}}<span>{{.Body}}</span>{{end}}
+	</div>
+{{end}}
+</div>{{flush}}
+<div class="colstack_grid panel_dashboard grid2">
+{{range .Grid2}}
 	<div id="{{.ID}}" class="grid_item {{.Class}}" title="{{.Note}}" style="{{if .TextColour}}color:{{.TextColour}};{{end}}{{if .Background}}background-color:{{.Background}};{{end}}">
 		{{if .Href}}<a href="{{.Href}}">{{.Body}}</a>{{else}}<span>{{.Body}}</span>{{end}}
 	</div>
