--- a/themes/nox/public/panel.css
+++ b/themes/nox/public/panel.css
@@ -122,6 +122,9 @@
 .stat_red {
 	background-color: rgb(88,68,68);
 }
+.grid2 {
+	margin-top: 12px;
+}
 
 .panel_buttons, .panel_floater {
 	margin-left: auto;
