Add the log tables to the debug page.

--- a/templates/panel_debug.html
+++ b/templates/panel_debug.html
@@ -121,6 +121,24 @@
 	<div class="grid_item grid_stat"><span>?</span></div>
 
 
+	<div class="grid_item grid_stat grid_stat_head"><span>Login Logs</span></div>
+	<div class="grid_item grid_stat grid_stat_head"><span>Reg Logs</span></div>
+	<div class="grid_item grid_stat grid_stat_head"><span>Mod Logs</span></div>
+
+	<div class="grid_item grid_stat"><span>{{.Database.LoginLogs}}</span></div>
+	<div class="grid_item grid_stat"><span>{{.Database.RegLogs}}</span></div>
+	<div class="grid_item grid_stat"><span>{{.Database.ModLogs}}</span></div>
+
+
+	<div class="grid_item grid_stat grid_stat_head"><span>Admin Logs</span></div>
+	<div class="grid_item grid_stat grid_stat_head"><span>???</span></div>
+	<div class="grid_item grid_stat grid_stat_head"><span>???</span></div>
+
+	<div class="grid_item grid_stat"><span>{{.Database.AdminLogs}}</span></div>
+	<div class="grid_item grid_stat"><span>?</span></div>
+	<div class="grid_item grid_stat"><span>?</span></div>
+
+
 	<div class="grid_item grid_stat grid_stat_head"><span>Views</span></div>
 	<div class="grid_item grid_stat grid_stat_head"><span>Views Agents</span></div>
 	<div class="grid_item grid_stat grid_stat_head"><span>Views Forums</span></div>
