--- a/themes/nox/public/account.css
+++ b/themes/nox/public/account.css
@@ -86,6 +86,9 @@
 #dash_avatar_buttons button {
 	margin-right: auto;
 }
+#revoke_avatars {
+	margin-left: auto;
+}
 #dash_right {
 	width: 100%;
 	margin-left: 12px;
