--- a/templates/panel_user_edit.html
+++ b/templates/panel_user_edit.html
@@ -1,31 +1,46 @@
-	<div class="colstack_item colstack_head">
-		<div class="rowitem"><h1>{{lang "panel_user_head"}}</h1></div>
-	</div>
-	<div id="panel_user" class="colstack_item the_form">
-		<form action="/panel/users/edit/submit/{{.Something.ID}}?session={{.CurrentUser.Session}}" method="post">
-		<div class="formrow">
-			<div class="formitem formlabel"><a>{{lang "panel_user_name"}}</a></div>
-			<div class="formitem"><input name="user-name" type="text" value="{{.Something.Name}}" placeholder="{{lang "panel_user_name_placeholder"}}" /></div>
-		</div>
-		{{if .CurrentUser.Perms.EditUserPassword}}<div class="formrow">
-			<div class="formitem formlabel"><a>{{lang "panel_user_password"}}</a></div>
-			<div class="formitem"><input name="user-password" type="password" placeholder="*****" autocomplete="off" /></div>
-		</div>{{end}}
-		{{if .CurrentUser.Perms.EditUserEmail}}<div class="formrow">
-			<div class="formitem formlabel"><a>{{lang "panel_user_email"}}</a></div>
-			<div class="formitem"><input name="user-email" type="email" value="{{.Something.Email}}" placeholder="example@localhost" /></div>
-		</div>{{end}}
-		{{if .CurrentUser.Perms.EditUserGroup}}
-		<div class="formrow">
-			<div class="formitem formlabel"><a>{{lang "panel_user_group"}}</a></div>
-			<div class="formitem">
-				<select name="user-group">
-				{{range .ItemList}}<option {{if eq .ID $.Something.Group}}selected {{end}}value="{{.ID}}">{{.Name}}</option>{{end}}
-				</select>
+<div class="colstack_item colstack_head">
+	<div class="rowitem"><h1>{{lang "panel_user_head"}}</h1></div>
+</div>
+<div id="panel_user" class="colstack_item the_form">
+	<form id="user_form" action="/panel/users/edit/submit/{{.Something.ID}}?session={{.CurrentUser.Session}}" method="post"></form>
+	<form id="avatar_form" enctype="multipart/form-data" action="/panel/users/avatar/submit/{{.Something.ID}}?session={{.CurrentUser.Session}}" method="post"></form>
+	<form id="remove_avatar_form" action="/panel/users/avatar/remove/submit/{{.Something.ID}}?session={{.CurrentUser.Session}}" method="post"></form>
+	<div class="formrow">
+		<div class="formitem formlabel"><a>{{lang "panel_user_avatar"}}</a></div>
+		<div class="formitem avataritem">
+			{{if .Something.RawAvatar}}<img src="{{.Something.Avatar}}" height=56 width=56 />{{end}}
+			<div class="avatarbuttons">
+				<input form="avatar_form" id="select_avatar" name="avatar_file" type="file" required class="auto_hide" />
+				<label for="select_avatar" class="formbutton">Select</label>
+				<button form="avatar_form" name="avatar_action" value=0>Upload</button>
+				{{if .Something.RawAvatar}}<button form="remove_avatar_form" name="avatar_action" value=1>Remove</button>{{end}}
 			</div>
-		</div>{{end}}
-		<div class="formrow">
-			<div class="formitem"><button name="panel-button" class="formbutton">{{lang "panel_user_update_button"}}</button></div>
 		</div>
-		</form>
 	</div>
+	<div class="formrow">
+		<div class="formitem formlabel"><a>{{lang "panel_user_name"}}</a></div>
+		<div class="formitem"><input form="user_form" name="user-name" type="text" value="{{.Something.Name}}" placeholder="{{lang "panel_user_name_placeholder"}}" /></div>
+	</div>
+	{{if .CurrentUser.Perms.EditUserPassword}}<div class="formrow">
+		<div class="formitem formlabel"><a>{{lang "panel_user_password"}}</a></div>
+		<div class="formitem"><input form="user_form" name="user-password" type="password" placeholder="*****" autocomplete="off" /></div>
+	</div>{{end}}
+	{{if .CurrentUser.Perms.EditUserEmail}}<div class="formrow">
+		<div class="formitem formlabel"><a>{{lang "panel_user_email"}}</a></div>
+		<div class="formitem"><input form="user_form" name="user-email" type="email" value="{{.Something.Email}}" placeholder="example@localhost" /></div>
+	</div>{{end}}
+	{{if .CurrentUser.Perms.EditUserGroup}}
+	<div class="formrow">
+		<div class="formitem formlabel"><a>{{lang "panel_user_group"}}</a></div>
+		<div class="formitem">
+			<select form="user_form" name="user-group">
+			{{range .ItemList}}<option {{if eq .ID $.Something.Group}}selected {{end}}value="{{.ID}}">{{.Name}}</option>{{end}}
+			</select>
+		</div>
+	</div>{{end}}
+	<div class="formrow">
+		<div class="formitem">
+			<button form="user_form" name="panel-button" class="formbutton">{{lang "panel_user_update_button"}}</button>
+		</div>
+	</div>
+</div>
