--- a/templates/panel_user_edit.html
+++ b/templates/panel_user_edit.html
@@ -11,9 +11,9 @@
 			{{if .Something.RawAvatar}}<img src="{{.Something.Avatar}}" height=56 width=56 />{{end}}
 			<div class="avatarbuttons">
 				<input form="avatar_form" id="select_avatar" name="avatar_file" type="file" required class="auto_hide" />
-				<label for="select_avatar" class="formbutton">Select</label>
-				<button form="avatar_form" name="avatar_action" value=0>Upload</button>
-				{{if .Something.RawAvatar}}<button form="remove_avatar_form" name="avatar_action" value=1>Remove</button>{{end}}
+				<label for="select_avatar" class="formbutton">{{lang "panel_user_avatar_select"}}</label>
+				<button form="avatar_form" name="avatar_action" value=0>{{lang "panel_user_avatar_upload"}}</button>
+				{{if .Something.RawAvatar}}<button form="remove_avatar_form" name="avatar_action" value=1>{{lang "panel_user_avatar_remove"}}</button>{{end}}
 			</div>
 		</div>
 	</div>
