--- a/templates/topics.html
+++ b/templates/topics.html
@@ -39,7 +39,7 @@
 {{/** TODO: Add ARIA attributes for this **/}}
 <div id="mod_topic_mover" class="modal_pane auto_hide">
 	<form action="/topic/move/submit/?session={{.CurrentUser.Session}}" method="post">
-		<input id="mover_fid" name="fid" value="0" type="hidden" />
+		<input id="mover_fid" name="fid" value=0 type="hidden" />
 		<div class="pane_header">
 			<h3>{{lang "topic_list.move_head"}}</h3>
 		</div>
@@ -53,9 +53,9 @@
 		</div>
 	</form>
 </div>
-<div class="rowblock topic_create_form quick_create_form" style="display: none;" aria-label="{{lang "quick_topic.aria"}}">
+<div class="rowblock topic_create_form quick_create_form" style="display:none;" aria-label="{{lang "quick_topic.aria"}}">
 	<form name="topic_create_form_form" id="quick_post_form" enctype="multipart/form-data" action="/topic/create/submit/?session={{.CurrentUser.Session}}" method="post"></form>
-	<img class="little_row_avatar" src="{{.CurrentUser.MicroAvatar}}" height="64" alt="{{lang "quick_topic.avatar_alt"}}" title="{{lang "quick_topic.avatar_tooltip"}}" />
+	<img class="little_row_avatar" src="{{.CurrentUser.MicroAvatar}}" height=64 alt="{{lang "quick_topic.avatar_alt"}}" title="{{lang "quick_topic.avatar_tooltip"}}" />
 	<div class="main_form">
 		<div class="topic_meta">
 			<div class="formrow topic_board_row real_first_child">
