--- a/templates/panel_debug.html
+++ b/templates/panel_debug.html
@@ -32,7 +32,7 @@
 
 <div class="colstack_item colstack_head colstack_sub_head">
 	<div class="rowitem"><h2>Memory Statistics</h2></div>
-</div>
+</div>{{flush}}
 <div id="panel_debug" class="colstack_grid">
 	<div class="grid_item grid_stat grid_stat_head"><span>Sys</span></div>
 	<div class="grid_item grid_stat grid_stat_head"><span>HeapSys</span></div>
@@ -92,7 +92,7 @@
 </div>
 <div class="colstack_item colstack_head colstack_sub_head">
 	<div class="rowitem"><h2>Database</h2></div>
-</div>
+</div>{{flush}}
 <div id="panel_debug" class="colstack_grid">
 	<div class="grid_item grid_stat grid_stat_head"><span>Topics</span></div>
 	<div class="grid_item grid_stat grid_stat_head"><span>Users</span></div>
@@ -167,7 +167,7 @@
 </div>
 <div class="colstack_item colstack_head colstack_sub_head">
 	<div class="rowitem"><h2>Disk</h2></div>
-</div>
+</div>{{flush}}
 <div id="panel_debug" class="colstack_grid">
 	<div class="grid_item grid_stat grid_stat_head"><span>Static Files</span></div>
 	<div class="grid_item grid_stat grid_stat_head"><span>Attachments</span></div>
@@ -180,9 +180,9 @@
 
 	<div class="grid_item grid_stat grid_stat_head"><span>Log Files</span></div>
 	<div class="grid_item grid_stat grid_stat_head"><span>Backups</span></div>
-	<div class="grid_item grid_stat grid_stat_head"><span>???</span></div>
+	<div class="grid_item grid_stat grid_stat_head"><span>Git</span></div>
 
 	<div class="grid_item grid_stat"><span>{{bunit .Disk.Logs}}</span></div>
 	<div class="grid_item grid_stat"><span>{{bunit .Disk.Backups}}</span></div>
-	<div class="grid_item grid_stat"><span>?</span></div>
+	<div class="grid_item grid_stat"><span>{{bunit .Disk.Git}}</span></div>
 </div>
