Use a client template for poll input. Tweak the poll input phrase. Increase the padding on .pollinput for Nox.

--- a/themes/nox/public/main.css
+++ b/themes/nox/public/main.css
@@ -978,6 +978,12 @@ input[type=checkbox]:checked + label .sel {
 .poll_results {
 	margin-left: 12px;
 }
+.pollinput {
+	margin-bottom: 5px;
+}
+.pollinput:last-child {
+	margin-bottom: 12px;
+}
 
 .ip_item {
 	display: none;
