--- a/templates/topic.html
+++ b/templates/topic.html
@@ -82,10 +82,10 @@
 	</div>
 	<div class="formrow poll_content_row auto_hide">
 		<div class="formitem">
-			<div class="pollinput" data-pollinput="0">
+			<div class="pollinput" data-pollinput=0>
 				<input type="checkbox" disabled />
 				<label class="pollinputlabel"></label>
-				<input form="quick_post_form" name="pollinputitem[0]" class="pollinputinput" type="text" placeholder="{{lang "topic.reply_add_poll_option"}}" />
+				<input form="quick_post_form" name="pollinputitem[0]" class="pollinputinput" type="text" placeholder="{{lang "topic.reply_add_poll_option_first"}}" />
 			</div>
 		</div>
 	</div>
