--- a/templates/panel_modlogs.html
+++ b/templates/panel_modlogs.html
@@ -1,17 +1,17 @@
 <div class="colstack_item colstack_head">
 	<div class="rowitem"><h1>{{lang "panel_logs_moderation_head"}}</h1></div>
 </div>
-<div id="panel_modlogs" class="colstack_item rowlist">
+<div id="panel_modlogs" class="colstack_item rowlist loglist">
 	{{range .Logs}}
 	<div class="rowitem panel_compactrow">
-		<span style="float: left;">
+		<span class="to_left">
 			<span>{{.Action}}</span>
-			{{if $.CurrentUser.Perms.ViewIPs}}<br /><small style="margin-left: 2px;font-size: 12px;" title="{{.IPAddress}}">{{.IPAddress}}</small>{{end}}
+			{{if $.CurrentUser.Perms.ViewIPs}}<br /><small title="{{.IPAddress}}">{{.IPAddress}}</small>{{end}}
 		</span>
 		<span class="to_right">
-			<span style="font-size: 14px;" title="{{.DoneAt}}">{{.DoneAt}}</span>
+			<span title="{{.DoneAt}}">{{.DoneAt}}</span>
 		</span>
-		<div style="clear: both;"></div>
+		<div style="clear:both;"></div>
 	</div>
 	{{end}}
 </div>
