--- a/templates/panel_reglogs.html
+++ b/templates/panel_reglogs.html
@@ -1,17 +1,17 @@
 <div class="colstack_item colstack_head">
 	<div class="rowitem"><h1>{{lang "panel_logs_registration_head"}}</h1></div>
 </div>
-<div id="panel_modlogs" class="colstack_item rowlist">
+<div id="panel_modlogs" class="colstack_item rowlist loglist">
 	{{range .Logs}}
 	<div class="rowitem panel_compactrow{{if not .Success}} bg_red{{end}}">
-		<span{{if not .Success}} class="panel_registration_attempt"{{end}} style="float: left;">
+		<span class="to_left{{if not .Success}} panel_registration_attempt{{end}}">
 			<span>{{if not .Success}}{{lang "panel_logs_registration_attempt"}}: {{end}}{{.Username}} ({{lang "panel_logs_registration_email"}}: {{.Email}}){{if .ParsedReason}} ({{lang "panel_logs_registration_reason"}}: {{.ParsedReason}}){{end}}</span>
-			{{if $.CurrentUser.Perms.ViewIPs}}<br /><small style="margin-left: 2px;font-size: 12px;" title="{{.IPAddress}}">{{.IPAddress}}</small>{{end}}
+			{{if $.CurrentUser.Perms.ViewIPs}}<br /><small title="{{.IPAddress}}">{{.IPAddress}}</small>{{end}}
 		</span>
 		<span class="to_right">
-			<span style="font-size: 14px;" title="{{.DoneAt}}">{{.DoneAt}}</span>
+			<span title="{{.DoneAt}}">{{.DoneAt}}</span>
 		</span>
-		<div style="clear: both;"></div>
+		<div style="clear:both;"></div>
 	</div>
 	{{end}}
 </div>
